RESOLVED FIXED88372
REGRESSION(110494): Can no longer drag-and-drop links into FileMaker Pro 12
https://bugs.webkit.org/show_bug.cgi?id=88372
Summary REGRESSION(110494): Can no longer drag-and-drop links into FileMaker Pro 12
Brady Eidson
Reported 2012-06-05 16:18:33 PDT
REGRESSION(110494): Can no longer drag-and-drop links into FileMaker Pro 12 110494 subtly changed a few things on the pasteboard when dragging and dropping. Notably it stopped writing the plain string format for the link URL as well as replaced the link URL with the image source URL if the link being dragged was associated with an image. In radar as <rdar://problem/11575898>
Attachments
Patch v1 (2.50 KB, patch)
2012-06-05 16:26 PDT, Brady Eidson
enrica: review+
Brady Eidson
Comment 1 2012-06-05 16:26:04 PDT
Created attachment 145893 [details] Patch v1 I'm in the middle of running the layouttests, but this is likely the final patch.
Enrica Casucci
Comment 2 2012-06-05 17:07:35 PDT
Comment on attachment 145893 [details] Patch v1 Looks good.
Brady Eidson
Comment 3 2012-06-05 17:17:17 PDT
Note You need to log in before you can comment on or make changes to this bug.