<rdar://problem/11575898> and https://bugs.webkit.org/show_bug.cgi?id=88372 REGRESSION(110494): Can no longer drag-and-drop links into FileMaker Pro 12

- Before r110494 we used to write the NSStringPboardType to the pasteboard.
  After r110494 we write NSURLPboardType instead.
  That's basically a no-op, but the NSStringPboardType needs to be restored.
- Before r110494 we wrote the link destination URL to the pasteboard.
  After r110494 we write the image src URL if the link is an image.
  We need to revert to writing the link URL.

Fortunately these changes can be accomplished with a 2-line fix.

Reviewed by Enrica Casucci.

* UIProcess/API/mac/WKView.mm:
(-[WKView _setPromisedData:WebCore::withFileName:withExtension:withTitle:withURL:withVisibleURL:withArchive:WebCore::forPasteboard:]):
n

Canonical link: https://commits.webkit.org/106197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119535 268f45cc-cd09-0410-ab3c-d52691b4dbfc